<resources>
    <string name="app_name">City of Ideas</string>
    <string name="samen_werken_aan_een_ide_e_ale_wereld">Samen werken aan een ide(e)ale wereld</string>
    <string name="city_of_ideas">City of Ideas</string>
    <string name="copyright">© The Tree Company - 2019</string>
    <string name="home_image">HomeImage</string>

    <string-array name="loadingScreen">
        <item>Jouw ideeën zijn goud waard!</item>
        <item>Samen werken aan een ide(e)ale wereld!</item>
    </string-array>

    <string name="login_email">Email</string>
    <string name="password">Wachtwoord</string>
    <string name="login_btn">Login</string>
    <string name="startup_register_btn">Registreren</string>
    <string name="forgot_password_btn">Wachtwoord vergeten?</string>
    <string name="login_google_btn">Google</string>
    <string name="login_microsoft_btn">Microsoft</string>
    <string name="register_btn">Registreren</string>
    <string name="register_name">Naam</string>
    <string name="confirm_password">Bevestig wachtwoord</string>
    <string name="birthday">Geboortedatum</string>

    <string name="title_activity_main">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Niet ingelogd</string>
    <string name="nav_header_subtitle">Je bent op het moment anoniem</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_account">Account</string>
    <string name="menu_qr">QR-code scannen</string>
    <string name="menu_ideations">Ideeënborden</string>
    <string name="menu_questionnaires">Vragenlijsten</string>
    <string name="menu_info">Info</string>
    <string name="menu_settings">Instellingen</string>
    <string name="dialog_connection_title">Verbindingsfout</string>
    <string name="dialog_connection_msg">Geen verbinding, opnieuw proberen?</string>
    <string name="dialog_connection_retry">Opnieuw</string>
    <string name="dialog_connection_shutdown">Afsluiten</string>

    <string name="stem">Stemmen</string>
    <string name="reageer">Reageren</string>

    <string name="project_list_current_fase_tv">Laatste fase:</string>
    <string name="project_list_project_name_tv">Projectnaam</string>
    <string name="project_list_project_status_tv">Project status</string>
    <string name="project_list_likes">#</string>
    <string name="project_list_shares">#</string>
    <string name="project_list_ideas">#</string>
    <string name="project_list_filter_tv">Filter</string>
    <string name="project_list_projects_tv">Projecten</string>
    <string name="project_list_comments">#</string>
    <string name="project_list_project_goal_tv">Project doel</string>

    <string-array name="project_list_filter_array">
        <item>Geen</item>
        <item>Naam</item>
        <item>Status</item>
        <item>Likes</item>
        <item>Reacties</item>
    </string-array>


    <string name="questionnaire_title">Vragenlijst</string>
    <string name="ideas_title">Ideeën</string>
    <string name="fb_likes">Fb-likes</string>
    <string name="twitter_likes">Twitter-likes</string>
    <string name="like_count">Likes</string>

    <string name="ideation_title">Ideation</string>
    <string name="meer_info">Meer info</string>


    <string name="iQuestion_title">Centrale Vraag</string>
    <string name="GotIdeas_button">Ga naar ideeën</string>
    <string name="url">URL</string>


    <string name="idea_title">Idee</string>

    <string name="pref_platform">pref_platform</string>
    <string name="pref_platform_id">pref_platform_id</string>
    <string name="first_time_title">Welkom bij City of Ideas!</string>
    <string name="first_time_explain">Dit is de eerste keer dat je de app opent en daarom vragen we je om eerst het
        platform van jouw gemeente te kiezen. Zou je later toch van platform willen veranderen dan kan je dat veranderen
        bij de instellingen van deze app.
    </string>
    <string name="first_time_accept_btn">Accepteren</string>
    <string name="platform_name">Platformnaam</string>
    <string name="first_time_selection">Huidige selectie: geen</string>
    <string name="first_time_selection_item">Huidige selectie: %1$s</string>
    <string name="app_pref">app_pref</string>
    <string name="x_time_selection">Verander hier je platform.</string>
    <string name="pref_platform_name">pref_platform_name</string>
    <string name="change_platform">Platform veranderen</string>
    <string name="info_why_title">Waarom?</string>
    <string name="info_how_title">Hoe?</string>
    <string name="info_why_main">Burgers betrekken bij beleid is heel erg belangrijk om beter beleid te kunnen maken en
        een groter draagvlak te vinden voor beslissingen. Burgers zijn expert in hun eigen buurt, interesses en
        activiteiten. Maar het is een uitdaging voor elke overheid en organisaties om een breed publiek te bereiken en
        niet telkens dezelfde burgers te laten deelnemen.
    </string>
    <string name="info_how_main">
        <i>City of Ideas</i>
        is een app waarbij burgers sneller hun mening kunnen laten horen. Een
        gemeente of organisatie kan projecten aanmaken met vragenlijsten of ideations, waarbij je zelf ideeën kan geven.
    </string>
    <string name="idea_list_item_title">idee titel</string>
    <string name="idea_list_item_thing">idee attribuut</string>
    <string name="idea_list_item_thingalso">idee</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
