<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_home"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_menu_account"
                android:title="@string/menu_account"/>
        <item
                android:id="@+id/nav_qr"
                android:icon="@drawable/ic_menu_qr"
                android:title="@string/menu_qr"/>
        <item
                android:id="@+id/nav_ideations"
                android:icon="@drawable/ic_menu_ideations"
                android:title="@string/menu_ideations"/>
        <item
                android:id="@+id/nav_questionnaires"
                android:icon="@drawable/ic_menu_questionnaires"
                android:title="@string/menu_questionnaires"/>
        <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/menu_info"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings"/>
    </group>
</menu>
