<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.RegisterActivity"
        android:background="@drawable/trees">

    <TextView
            android:text="@string/city_of_ideas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="36sp" android:textColor="@android:color/white"
            android:textStyle="bold"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="330dp"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_corner" android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:id="@+id/loginLL"
            app:layout_constraintVertical_bias="0.354" android:elevation="2dp">
        <ImageView
                android:layout_width="50dp"
                app:srcCompat="@drawable/logo"
                android:id="@+id/treeHome2"
                android:layout_height="50dp" android:contentDescription="@string/home_image"
                android:layout_gravity="center"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:id="@+id/registerNameEt"
                android:hint="@string/register_name"
                android:padding="8dp"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:elevation="1dp"
                tools:ignore="Autofill"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:id="@+id/registerBirthdayEt"
                android:hint="@string/birthday"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:elevation="1dp"
                tools:ignore="Autofill"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:id="@+id/registerEmailEt"
                android:hint="@string/login_email"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:elevation="1dp"
                tools:ignore="Autofill"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:id="@+id/registerPasswordEt"
                android:hint="@string/password"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:elevation="1dp"
                tools:ignore="Autofill"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/registerConfirmPasswordEt"
                android:hint="@string/confirm_password"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:elevation="1dp"
                tools:ignore="Autofill"/>
        <Button
                android:text="@string/register_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/registerBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="24dp" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
                app:layout_constraintVertical_bias="0.0" android:elevation="2dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>