<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <TextView
            android:text="@string/questionnaire_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitel" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="18sp"/>
    <TextView

            android:text="@string/like_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLikeCount"
            android:drawableStart="@drawable/ic_likes"

            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvTitel"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvFbCount" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/fb_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFbCount" app:layout_constraintStart_toEndOf="@+id/tvLikeCount"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitel"
            app:layout_constraintEnd_toStartOf="@+id/tvTwitterCount" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/twitter_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTwitterCount" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitel" app:layout_constraintStart_toEndOf="@+id/tvFbCount"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>