<?xml version="1.0" encoding="utf-8"?>
<!--
    author Edwin Kai-Yin Tam
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.InfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
                android:background="@color/white">

            <TextView
                    android:text="@string/info_why_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/infoWhyTitle" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" android:textStyle="bold"/>
            <TextView
                    android:text="@string/info_why_main"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/infoWhyMain"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/infoWhyTitle"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"/>
            <TextView
                    android:text="@string/info_how_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/infoHowTitle" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/infoWhyMain" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:textSize="24sp" android:textStyle="bold"/>
            <TextView
                    android:text="@string/info_how_main"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    android:id="@+id/infoHowMain" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/infoHowTitle" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"/>
            <ImageView
                    android:src="@mipmap/ic_launcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2" android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:contentDescription="@string/home_image"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>