<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".activitties.SplashScreenActivity">


    <TextView
            android:text="@string/city_of_ideas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loadingTitle" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="44dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="36sp" android:textColor="@android:color/black"/>
    <ImageView
            android:layout_width="0dp"
            app:srcCompat="@drawable/logo"
            android:id="@+id/treeHome"
            app:layout_constraintTop_toBottomOf="@+id/loadingTitle" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="436dp" android:contentDescription="@string/home_image"/>
    <TextView
            android:text="@string/copyright"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:id="@+id/loadingCopyright"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loadingSpinner" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loadingSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/loadingQuote" android:progressTint="@android:color/holo_green_dark"
            android:progressDrawable="@android:drawable/btn_star_big_on"
    />
    <TextView
            android:text="@string/samen_werken_aan_een_ide_e_ale_wereld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loadingQuote"
            app:layout_constraintTop_toBottomOf="@+id/treeHome" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:textSize="18sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>