<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <TextView
            android:text="@string/iQuestion_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/tvQtitle"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/meer_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvIDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvQtitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvSiteUrl"
            android:autoLink="web"
            android:clickable="true"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/tvIDescription" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>