<?xml version="1.0" encoding="utf-8"?>
<!--
    author Edwin Kai-Yin Tam
-->
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".activities.ChoosePlatformActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            android:background="@color/white">

        <TextView
                android:text="@string/first_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/firstTimeTitle"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="16dp" android:textSize="24sp"
                android:textStyle="bold"/>
        <TextView
                android:text="@string/first_time_explain"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/firstTimeExplain"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                app:layout_constraintTop_toBottomOf="@+id/firstTimeTitle" android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"/>
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/firstTimeExplain"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@+id/firstTimeCurrentSelection" android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp" android:id="@+id/firstTimeRV" app:layout_constraintVertical_bias="0.0"/>
        <Button
                android:text="@string/first_time_accept_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/firstTimeAcceptBtn"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/first_time_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/firstTimeCurrentSelection" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/firstTimeAcceptBtn"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>