<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars[2]"
            android:id="@+id/projectImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/project_list_project_img_dsc"/>

    <TextView
            android:text="@string/project_list_project_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/projectListName" app:layout_constraintStart_toStartOf="@+id/projectImage"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/projectImage" android:textSize="24sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/project_list_project_status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/projectListStatus" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@+id/projectImage" android:layout_marginEnd="16dp"
            android:textSize="18sp"/>
    <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black_overlay"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/projectImage"
            app:layout_constraintEnd_toEndOf="@+id/projectImage"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toBottomOf="@+id/projectImage"
            android:id="@+id/constraintLayout" app:layout_constraintVertical_bias="0.0">

        <TextView
                android:text="@string/project_list_current_fase_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/projectListPhase" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:textSize="18sp" android:textStyle="bold"/>
        <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black_overlay"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline" app:layout_constraintGuide_percent=".33"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guideline2"
                app:layout_constraintGuide_percent=".66"/>
        <TextView
                android:text="@string/project_list_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/projectListLikes"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/projectListPhase"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                android:drawableStart="@drawable/ic_likes"
                android:drawablePadding="3dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/project_list_ideas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/projectListIdeas"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/projectListPhase"
                android:drawableStart="@drawable/ic_menu_ideations"
                android:drawablePadding="3dp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginTop="8dp"/>
        <TextView
                android:text="@string/project_list_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/projectListComments"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/projectListPhase"
                android:drawableStart="@drawable/ic_comment"
                android:drawablePadding="3dp"
                android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>